[project]
name = "content-creator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno==1.5.10",
    "python-dotenv>=1.1.1",
    "groq>=0.12.0",
    "moviepy>=1.0.3",
    "tavily-python>=0.7.11",
    "openai>=1.100.1",
    "sqlalchemy>=2.0.43",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "ipykernel>=6.30.1",
    "tweepy>=4.16.0",
    "yfinance>=0.2.65",
    "firecrawl-py>=3.0.3",
    "crawl4ai>=0.7.4",
    "browserbase>=1.4.0",
    "playwright>=1.54.0",
    "beautifulsoup4>=4.13.4",
]
